# internal/file/response.go
@@ -6,6 +6,10 @@ type messageResponse struct {
 	Message string `json:"message"`
 }
 
+type newIdResponse struct {
+	Id string `json:"id"`
+}
+
 func NewErrorResponse(c *gin.Context, statusCode int, message string) {
 	c.AbortWithStatusJSON(statusCode, messageResponse{message})
 }
